<resources>
    <string name="app_name">NewRatesCar</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="content_authority">com.jmgarzo.newratescar.provider</string>
    <string name="title_activity_vehicle">Vehicle</string>
    <string name="vehicle_item_name">Vehicles</string>
    <string name="refuel_item_name">Refuel</string>
    <string name="service_item_name">Services</string>
    <string name="roadworthiness_item_name">Inspection</string>
    <string name="toll_item_name">Toll</string>
    <string name="insurance_item_name">Insurance</string>
    <string name="maintenance_item_name">Garage</string>
    <string name="empty_class_db" translatable="false">none</string>
    <string name="car_class_db" translatable="false">car</string>
    <string name="van_class_db" translatable="false">van</string>
    <string name="truck_class_db" translatable="false">truck</string>
    <string name="motorcycle_class.db" translatable="false">motorcycle</string>
    <string name="quad_class_db" translatable="false">quad</string>
    <string name="tractor_class_db" translatable="false">tractor</string>
    <string name="bike_class_db" translatable="false">bike</string>
    <string name="bus_class_db" translatable="false">bus</string>
    <string name="empty_class_value">None</string>
    <string name="car_class_value">Car</string>
    <string name="van_class_value">Van</string>
    <string name="truck_class_value">Truck</string>
    <string name="motorcycle_class_value">Motorcycle</string>
    <string name="quad_class_value">Quad</string>
    <string name="tractor_class_value">Tractor</string>
    <string name="bike_class_value">Bike</string>
    <string name="bus_class_value">Bus</string>
    <string name="make_alfa_romeo"> ALFA ROMEO </string>
    <string name="make_acura"> ACURA </string>
    <string name="make_aston_martin"> ASTON MARTIN </string>
    <string name="make_audi"> AUDI </string>
    <string name="make_bentley"> BENTLEY </string>
    <string name="make_bmw"> BMW </string>
    <string name="make_bugatti"> BUGATTY </string>
    <string name="make_buick"> BUICK </string>
    <string name="make_cadillac"> CADILLAC </string>
    <string name="make_chery"> CHERY </string>
    <string name="make_chevrolet"> CHEVROLET </string>
    <string name="make_chrysler"> CHRYSLER </string>
    <string name="make_citroen"> CITROËN </string>
    <string name="make_dacia"> DACIA </string>
    <string name="make_daewoo"> DAEWOO </string>
    <string name="make_dodge"> DODGE </string>
    <string name="make_ebro_logo"> EBRO </string>
    <string name="make_ferrari"> FERRARI </string>
    <string name="make_fiat"> FIAT </string>
    <string name="make_ford"> FORD </string>
    <string name="make_gaz"> GAZ </string>
    <string name="make_holden"> HOLDEN </string>
    <string name="make_honda"> HONDA </string>
    <string name="make_hyundai"> HYUNDAI </string>
    <string name="make_infiniti"> INFINITI </string>
    <string name="make_jaguar"> JAGUAR </string>
    <string name="make_jeep"> JEEP </string>
    <string name="make_kia"> KIA </string>
    <string name="make_lada"> LADA </string>
    <string name="make_lamborghini"> LAMBORGHINI </string>
    <string name="make_lancia"> LANCIA </string>
    <string name="make_land_rover"> LAND ROVER </string>
    <string name="make_lexus"> LEXUS </string>
    <string name="make_lotus"> LOTUS </string>
    <string name="make_maserati"> MASERATI </string>
    <string name="make_maybach"> MAYBACH </string>
    <string name="make_mazda"> MAZDA </string>
    <string name="make_mercedes"> MERCEDES </string>
    <string name="make_mercury"> MERCURY </string>
    <string name="make_mini"> MINI </string>
    <string name="make_mitsubishi"> MITSUBISHI </string>
    <string name="make_nissan"> NISSAN </string>
    <string name="make_opel"> OPEL </string>
    <string name="make_pagani"> PAGANI </string>
    <string name="make_peugeot"> PEUGEOT </string>
    <string name="make_piaggio"> PIAGGIO </string>
    <string name="make_pontiac"> PONTIAC </string>
    <string name="make_porshe"> PORCHE </string>
    <string name="make_renault"> RENAULT </string>
    <string name="make_rolls_royce"> ROLL ROYCE </string>
    <string name="make_rover"> ROVER </string>
    <string name="make_saab"> SAAB </string>
    <string name="make_scion"> SCION </string>
    <string name="make_seat"> SEAT </string>
    <string name="make_skoda"> SKODA </string>
    <string name="make_ssang_yong"> SSANG YONG </string>
    <string name="make_subaru"> SUBARU </string>
    <string name="make_suzuki"> SUZUKI </string>
    <string name="make_toyota"> TOYOTA </string>
    <string name="make_vauxhall"> VAUXHALL </string>
    <string name="make_volkswagen"> VOLKSWAGEN </string>
    <string name="make_volvo"> VOLVO </string>
    <string name="fuel_type_petrol">Petrol</string>
    <string name="fuel_type_diesel">Diesel</string>
    <string name="fuel_type_electric">Electric</string>
    <string name="fuel_type_hybrid">Hybrid</string>
    <string name="subfuel_type_regular">Regular</string>
    <string name="subfuel_type_premium">Premium</string>
    <string name="title_activity_vehicle_detail">VehicleDetail</string>
    <string name="vehicle_name">Number plate or name*</string>
    <string name="vehicle_name_error">Number plate or name is required</string>
    <string name="vehicle_class">Vehicle class</string>
    <string name="vehicle_fuel_type">Fuel type</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_mileage">Mileage</string>
    <string name="vehicle_additional_information">Additional information</string>
    <string name="asterisk_label">* indicates required field </string>
    <string name="empty_vehicles_list">No Vehicles Information Available</string>
    <string name="vehicle_name_hint">Select a vehicle*</string>
    <string name="vehicle_date">Refuel Date*</string>
    <string name="refuel_fuel_type">Fuel type*</string>
    <string name="refuel_fuel_subtype">Fuel sort</string>
    <string name="refuel_mileage">Odometer*</string>
    <string name="refuel_litres">Quantity*</string>
    <string name="refuel_gas_price">Fuel Price*</string>
    <string name="refuel_total_price">Total Price*</string>
    <string name="refuel_is_full">Fully charged fuel tank</string>
    <string name="refuel_is_roof_rack">Roof rack </string>
    <string name="refuel_is_trailer">Trailer </string>
    <string name="refuel_motorway">Motorway</string>
    <string name="refuel_city">City</string>
    <string name="refuel_economy">Economy</string>
    <string name="refuel_sport">Sport</string>
    <string name="refuel_average_speed">Average speed</string>
    <string name="refuel_average_consumption">Average consumption</string>
    <string name="refuel_payment_type">Payment type</string>
    <string name="refuel_gas_station">Gas Station</string>
    <string name="refuel_additional_information">Additional information</string>
    <string name="refuel_partial_fill_ups">Partial fill ups</string>
    <string name="refuel_vehicle_name_error">Select a vehicle is required</string>
    <string name="refuel_error_date">Date is required</string>
    <string name="refuel_error_fuel_type">Fuel Type is required</string>
    <string name="refuel_error_mileage">Odometer is required</string>
    <string name="refuel_error_litres">Quantity is required</string>
    <string name="refuel_error_gas_price">Gas price is required</string>
    <string name="refuel_error_total_price">Total price is required</string>
    <string name="empty_roadworthiness_list">No Roadworthiness Information Available</string>
    <string name="road_date">Roadworthiness date*</string>
    <string name="road_next_date">Roadworthiness next date</string>
    <string name="road_mileage">Odometer</string>
    <string name="road_result">Result</string>
    <string name="road_additional_information">Additional information</string>
    <string name="road_vehicle_name_error">Vehicle is required</string>
    <string name="road_error_date">Date is required</string>
    <string name="road_next">Next: </string>
    <string name="toll_date">Toll date*</string>
    <string name="toll_price">Toll price</string>
    <string name="toll_name">Toll name</string>
    <string name="toll_road">Road</string>
    <string name="toll_direction">Direction</string>
    <string name="toll_location">Location</string>
    <string name="empty_toll_list">No Toll Information Available</string>
    <string name="toll_additional_information">Additional information</string>
    <string name="toll_vehicle_name_error">Select a vehicle is required</string>
    <string name="toll_error_date">Date is required</string>
    <string name="insurance_from">From: </string>
    <string name="insurance_to">to: </string>
    <string name="empty_insurance_list">No Insurance Information Available</string>
    <string name="insurance_start_date">Start Date</string>
    <string name="insurance_end_date">End Date</string>
    <string name="insurance_price">Price</string>
    <string name="insurance_company">Company</string>
    <string name="insurance_policy">Policy</string>
    <string name="insurance_additional_information">Additional Information</string>
    <string name="empty_maintenance_list">No Maintenance Information Available</string>
    <string name="maintenance_date">Maintenance date*</string>
    <string name="maintenance_title">Maintenance title*</string>
    <string name="maintenance_description">Description</string>
    <string name="maintenance_mileage">Odometer</string>
    <string name="maintenance_type">Maintenance Type</string>
    <string name="maintenance_type_breakdown">Breakdown</string>
    <string name="maintenance_type_maintenance">Regular maintenance</string>
    <string name="maintenance_price">Price</string>
    <string name="maintenance_garage">Garage</string>
    <string name="maintenance_additional_information">Additional Information</string>
    <string name="maintenance_is_regular">Regular</string>
    <string name="maintenance_regularity">Regularity</string>
    <string name="maintenance_regularity_hint">e.g. 15000 </string>
    <string name="maintenance_vehicle_name_error">Select a vehicle is required</string>
    <string name="maintenance_error_date">Date is required</string>
    <string name="maintenance_error_title">Title is required</string>
    <string name="dialog_discard_changes">Discard your changes?</string>
    <string name="dialog_agree">OK</string>
    <string name="dialog_disagree">CANCEL</string>
    <string name="toast_vehicle_saved">Vehicle saved</string>
    <string name="toast_road_saved">Data saved</string>
    <string name="vehicles_activity_title">My vehicles </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_units">Units</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_category_units_title">Units</string>
    <string name="pref_currency_key" translatable="false">Units</string>
    <string name="pref_currency_default_value" translatable="false">EUR</string>
    <string name="pref_currency_title">Currency</string>
    <string name="pref_amount_key" translatable="false">Amount</string>
    <string name="pref_amount_default_value" translatable="false">litres</string>
    <string name="pref_distance_key" translatable="false">Distance</string>
    <string name="pref_distance_default_value" translatable="false">km</string>
</resources>