<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingStart="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/better_spinner_toll_vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_name_hint"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"

            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_toll_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_toll_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toll_date"
                android:inputType="date"
                android:maxLength="25"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_toll_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/input_toll_currency_unit"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/input_toll_currency_unit">

                <EditText
                    android:id="@+id/input_toll_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/toll_price"
                    android:inputType="numberDecimal"
                    android:maxLength="15"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/input_toll_currency_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:textSize="16sp" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_toll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_toll_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toll_name"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_toll_road"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_toll_road"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toll_road"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_toll_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_toll_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toll_direction"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_toll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_toll_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toll_location"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_toll_additional_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_toll_additional_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/refuel_additional_information"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingBottom="24dp"
            android:paddingTop="16dp"
            android:text="@string/asterisk_label"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>