<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_vehicle_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jmgarzo.newratescar.VehicleDetailFragment"
    tools:showIn="@layout/activity_vehicle_detail">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_vehicle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_name"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/better_spinner_vehicle_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_class"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        android:textSize="16dp"

/>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/better_spinner_fuel_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_fuel_type"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        android:textSize="16dp"

        />

    <!--android:textColorHint="#05ab9a"-->









</LinearLayout>
